err/koalacore.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/koalacore'...
Compiling './lib/python3.5/site-packages/koalacore/config.py'...
***   File "./lib/python3.5/site-packages/koalacore/config.py", line 36
    raise ValueError, 'Not a boolean: %s' % v
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/koalacore/privileges.py'...
***   File "./lib/python3.5/site-packages/koalacore/privileges.py", line 103
    DEFAULT_UNIX_PERMISSIONS=0700,
                                ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/koalacore/rbac.py'...
***   File "./lib/python3.5/site-packages/koalacore/rbac.py", line 107
    except PermissionDenied, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/koalacore-0.1.7a0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
